gccida/g0/clear_reload_reg_in_use
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/reload1.c:4723:63: error: must use 'enum' tag to refer to type 'reload_type'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/reload1.c:4723:81: error: must use 'enum' tag to refer to type 'machine_mode'
void  clear_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                                                ^
                                                                                enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/reload1.c:4775:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/reload1.c:4775:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/reload1.c:4870:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[rld[i].mode] == MODE_COMPLEX_INT || mode_class_0[rld[i].mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/reload1.c:4870:60: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[rld[i].mode] == MODE_COMPLEX_INT || mode_class_0[rld[i].mode] == MODE_COMPLEX_FLOAT ) 
                                                           ^~~~~~~~~~~~
                                                           mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/clear_reload_reg_in_use/src/obj/reload1.o] Error 1
